--- a/.env.service-identity.example
+++ b/.env.service-identity.example
@@ -2,5 +2,10 @@ DATABASE_URL=postgres://cr45:change-me@postgres:5432/cr45?sslmode=disable
 DAUTH_BASE_URL=https://auth.delta.nitt.edu
 DAUTH_CLIENT_ID=change-me
 DAUTH_CLIENT_SECRET=change-me
-DAUTH_REDIRECT_URI=https://api.example.com/identity/callback
+DAUTH_REDIRECT_URI=https://api.example.com/identity/auth/dauth/callback
+DAUTH_SCOPE=user
+DAUTH_FRONTEND_SUCCESS_URL=https://cr45.example.com/
+DAUTH_FRONTEND_ALLOWED_ORIGINS=https://cr45.example.com,http://localhost:3000
 HTTP_ADDR=:8080
+EMAILOTP_ALLOW_DIRECT_EMAIL=true
+EMAILOTP_ROLL_EMAIL_TEMPLATE=%s@nitt.edu
