--- a/.env.adapter-matrix.example
+++ b/.env.adapter-matrix.example
@@ -1,4 +1,5 @@
 DATABASE_URL=postgres://cr45:change-me@postgres:5432/cr45?sslmode=disable
+LOG_LEVEL=info
 MATRIX_HOMESERVER_URL=http://matrix.example.com:8008
 MATRIX_USER_ID=@cr45bot:example.com
 MATRIX_ACCESS_TOKEN=change-me
