--- a/.env.service-identity.example
+++ b/.env.service-identity.example
@@ -7,5 +7,6 @@ DAUTH_SCOPE=user
 DAUTH_FRONTEND_SUCCESS_URL=https://cr45.example.com/
 DAUTH_FRONTEND_ALLOWED_ORIGINS=https://cr45.example.com,http://localhost:3000
 HTTP_ADDR=:8080
+LOG_LEVEL=info
 EMAILOTP_ALLOW_DIRECT_EMAIL=true
 EMAILOTP_ROLL_EMAIL_TEMPLATE=%s@nitt.edu
