--- a/.env.service-timetable.example
+++ b/.env.service-timetable.example
@@ -1,3 +1,4 @@
 HTTP_ADDR=:8080
+LOG_LEVEL=info
 DATABASE_URL=postgres://cr45:change-me@postgres:5432/cr45?sslmode=disable
 IDENTITY_BASE_URL=http://service-identity:8080
